--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# fix colors in nvim
+# https://github.com/tmux/tmux/issues/696
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # set prefix to CTRL-A
 unbind-key C-b
 set-option -g prefix C-a
