--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,7 @@
+# stop tmux from using login shell
+# https://superuser.com/questions/1330824/how-to-stop-tmux-from-launching-login-shells 
+set -g default-command "${SHELL}"
+
 # fix colors in nvim
 # https://github.com/tmux/tmux/issues/696
 set -g default-terminal "xterm-256color"
