--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,10 +7,10 @@ set -g default-command "${SHELL}"
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# set prefix to CTRL-A
+# set prefix to CTRL-space
 unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
 # enable mouse
 set -g mouse on
